<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCOa3_Y7gizAWVK9r0Yc7PbIaSo_JWB_yI</string>
    <string name="OKAPIConsumerKey">mcuwKK4dZSphKHzD5K4C</string>
    <string name="OKAPIConsumerSecret">Zpedb5gdPNK2Q5nsEgwwYJDAh35cDXFucKydFEgk</string>
    <string name="app_name">OC Client</string>
    <string name="title_activity_maps">Opencaching Map</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_download_caches">Pobierz_skrzynki</string>
    <string name="title_activity_cache">CacheActivity</string>
    <string name="title_section1">Opis</string>
    <string name="title_section2">Logi</string>
    <string name="title_section3">Zdjęcia</string>
    <string name="cache_descripion">OPIS SKRZYNKI</string>
    <string name="action_filter_caches">Filtruj_skrzynki</string>
    <string name="found">Znalezione</string>
    <string name="own">Własne</string>
    <string name="ignored">Ignorowane</string>
    <string name="not_fount">Jeszcze nieznalezione</string>
    <string name="temporarily_unavailable">Tymczasowo niedostępne</string>
    <string name="archived">Zarchiwizowane</string>
    <string name="action_save_caches">Zapisz skrzynki offline</string>
    <string name="action_load_caches">Wczytaj skrzynki</string>
    <string name="set_map_center">Wybierz punkt na mapie</string>
    <string name="download_caches">Pobierz</string>
    <string name="cancel">Anuluj</string>
    <string name="ok">OK</string>
    <string name="save_caches">Pobierz skrzynki</string>
    <string name="all_grades">Dowolna ocena</string>
    <string name="at_least_normal">Przynajkniej \"normalna\"</string>
    <string name="at_least_good">Przynajmniej \"dobra\"</string>
    <string name="only_very_good">Tylko \"znakomita\"</string>
    <string name="minimum_grade">Minimalna ocena</string>
    <string name="set_localization">Wybierz lokalizację</string>
    <string name="hint">Podpowiedź</string>
    <string name="gallery">Galeria</string>
    <string name="estimated">Szacowana wielkość:</string>
    <string name="number_of_caches">Ilość skrzynek</string>
    <string name="delete_saved_caches">Usuń zapisane skrzynki</string>
    <string name="settings">Ustawienia</string>
    <string name="general">Ogólne</string>
    <string name="lack">Brak</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="other">Inne</string>
    <string name="clear_map">Wyczyść mapę</string>
    <string name="change_filters">Zmień filtry</string>
    <string name="authorization">Autoryzacja</string>
    <string name="log_in">Zaloguj się</string>
    <string name="log_out">Wyloguj się</string>
    <string name="logged_as">Zalogowany jako</string>
    <string name="view_map_as">Przeglądaj mapę jako</string>
    <string name="logged_as_summary">Kliknij aby zalogować</string>
    <string name="internet_connection_error">Brak dostępu do Internetu</string>
    <string name="couldnt_find_username">Nie znaleziono użytkownika</string>
    <string name="logged_in_successfully">Zalogowamo pomyślnie</string>
    <string name="date">Data</string>
    <string name="add_new_log">Nowy wpis</string>
    <string name="new_log">Nowy wpis</string>
    <string name="found_it">Znaleziona</string>
    <string name="didnt_found_it">Nieznaleziona</string>
    <string name="comment">Komentarz</string>
    <string name="need_maintenance">Potrzebny serwis</string>
    <string name="maintenance_performed">Serwis wykonany</string>
    <string name="will_attend">Zamierza uczestniczyć</string>
    <string name="attended">Uczestniczył</string>
    <string name="choose_log_type">Wybierz typ logu</string>
    <string name="poor">Słaba</string>
    <string name="below_average">Poniżej przeciętnej</string>
    <string name="average">Normalna</string>
    <string name="good">Dobra</string>
    <string name="excellent">Znakomita</string>
    <string name="change">Zmień</string>
    <string name="add_recommendation">Daj rekomendację</string>
    <string name="content_entry">Treść wpisu...</string>
    <string name="add_log">Dodaj wpis</string>
    <string name="log_password_required">Wymagane hasło do logu</string>
    <string name="log_password">Hasło do logu</string>
    <string name="downloading">Pobieranie...</string>
    <string name="deleted_successfully">Usunięto pomyślnie</string>
    <string name="no_caches_to_delete">Brak skrzynek do usunięcia</string>
    <string name="canceled">Anulowano</string>
    <string name="coordinates">Współrzędne</string>
    <string name="sub_admin">Powiat</string>
    <string name="choose_coordinates">Wybierz lokalizację</string>
    <string name="set_username_in_settings">Wprowadź użytkownika w ustawieniach</string>
    <string name="compass">Kompas</string>
    <string name="action_compass">kompas</string>
    <string name="devices_location">Lokalizacja urządzenia</string>
    <string name="opencaching_serwer_connection_error">Nie udało się połączyć z opencaching.pl</string>
    <string name="localization_disable">Lokalizacja wyłączona</string>
    <string name="do_set_localization_enable">Włączyć lokalizację teraz?</string>

    <string-array name="filters">
        <item>@string/found</item>
        <item>@string/not_fount</item>
        <item>@string/ignored</item>
        <item>@string/own</item>
        <item>@string/temporarily_unavailable</item>
        <item>@string/archived</item>
    </string-array>

    <string-array name="minimum_grade">
        <item>@string/minimum_grade</item>
        <item>@string/all_grades</item>
        <item>@string/at_least_normal</item>
        <item>@string/at_least_good</item>
        <item>@string/only_very_good</item>
    </string-array>

    <string-array name="log_type">
        <item>@string/choose_log_type</item>
        <item>@string/found_it</item>
        <item>@string/didnt_found_it</item>
        <item>@string/comment</item>
        <item>@string/need_maintenance</item>
        <item>@string/maintenance_performed</item>
    </string-array>

</resources>
