<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/general">

        <Preference
            android:title="@string/logged_as"
            android:key="prefLoggedAs"
            android:summary="@string/logged_as_summary"/>

        <EditTextPreference
            android:title="@string/view_map_as"
            android:key="prefUsername" />

        <Preference
            android:title="@string/coordinates"
            android:key="prefCoordinates" />

        <CheckBoxPreference
            android:id="@+id/locationCheckBox"
            android:title="@string/devices_location"
            android:defaultValue="false"
            android:key="prefDeviceLocation" />

    </PreferenceCategory>

</PreferenceScreen>