<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <me.grantland.widget.AutofitTextView
            android:id="@+id/cacheName"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:maxLines="1"/>

        <Spinner
            android:id="@+id/spinner_log_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/log_type"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dateOfLog"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:layout_marginLeft="40dp"
                android:onClick="OnChangeDateClick"/>

        </LinearLayout>

        <CheckBox
            android:text="@string/add_recommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recomendationCheckBox"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:visibility="gone"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gradeRatingBar"
            android:numStars="5"
            android:stepSize="1"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="4"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/logText"
            android:hint="@string/content_entry"
            android:gravity="left|top" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/log_password"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:id="@+id/logPasswordEditText"
            android:visibility="gone"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_log"
            android:onClick="onAddNewLogClick"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>
</ScrollView>