<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kopec.wojciech.occlient.SaveCacheActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/save_caches">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/saveMapView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:name="com.google.android.gms.maps.MapFragment">

        <ImageView
            android:id="@+id/saveMapCross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cross"
            android:layout_gravity="center"
            android:layout_centerInParent="true"/>

        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/ic_check_circle_black_48dp"-->
            <!--android:layout_gravity="bottom|right"-->
            <!--android:layout_marginEnd="50dp"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:onClick="onSetMapCenterClick"/>-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:onClick="onSetMapCenterClick"
            android:layout_gravity="bottom|right"
            android:layout_marginEnd="8dp"/>

    </fragment>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_caches"
                android:textSize="12sp"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numberOfDownloadingCaches"
                android:layout_marginStart="5dp"
                android:text="100"
                android:textSize="12sp"
                android:layout_marginTop="5dp" />

        </LinearLayout>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/limitSeekBar"
            android:layout_marginTop="10dp"
            android:max="500"/>

        <!--<Spinner-->
            <!--android:id="@+id/spinner_grade"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:entries="@array/minimum_grade" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_filters"
            android:onClick="onChangeFiltersClick"
            android:layout_marginTop="10dp"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_caches_fragment"
            android:layout_alignParentBottom="true">
        </FrameLayout>

    </RelativeLayout>

</LinearLayout>